tests/success/c_printf/main.adept3

pragma => adept("3.0")

#[foreign]
func printf(format ptr<char>, ...) int

func main {
    printf(c"Hello, World!\n")
}

