tests/error/cannot_use_private_func/sayMessage.adept3

#[foreign]
func printf(format ptr#char, ...) int

func sayMessage() {
    helloWorld()
}

#[private]
func helloWorld {
    printf(c"Hello, world!\n")
}

